--- a/Sequences/06 - Custom Sequences - Part 1.ipynb
+++ b/Sequences/06 - Custom Sequences - Part 1.ipynb
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "id": "B5c8w9imzDNO"
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "id": "ZbHtRbnmzDNO"
@@ -370,15 +370,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "mgGEmOBUzDNP",
-        "outputId": "26d7c005-b9b0-4b7a-81c4-78e802f85d70"
+        "outputId": "910eb4dc-d678-49dd-f309-bf66b7eb1697",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'int'> 0\n"
           ]
@@ -390,15 +393,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "MdlwYZujzDNQ",
-        "outputId": "1cab1557-93c1-405f-d03a-226a208b701e"
+        "outputId": "93eee1a9-452b-4ef5-c418-99a7dcd68021",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'int'> 100\n"
           ]
@@ -410,15 +416,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "jew1dI4SzDNR",
-        "outputId": "201186e6-caf4-4c39-a049-bdcb87fce9cd"
+        "outputId": "fc141f6e-c95a-40b3-f45b-fb03b3366f99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'slice'> slice(0, 2, None)\n"
           ]
@@ -430,15 +439,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "AxejaI79zDNR",
-        "outputId": "362e56e6-e759-400e-9665-81a74786c123"
+        "outputId": "06129a59-1e26-4835-b2f4-4f734f209c9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'slice'> slice(0, 10, 2)\n"
           ]
